# hdbase

./: .gitignore  README.md  db.sqlite3  main.py  pyproject.toml  requirements.txt
common/: admin.py  forms.py  models.py  urls.py  views.py
common/jinja2/: customer-delete.html  customer-edit.html  customer-list.html  profile-edit.html  profile-pass.html  profile.html  setpass.html  signin.html  signup.html
common/migrations/: 0001_initial.py  0002_alter_profile_options.py
hdbase/: apps.py  consumers.py  filters.py  forms.py  models.py  pipeline.py  routing.py  tasks.py  urls.py  utils.py  views.py
hdbase/jinja2/: about.html  arrhythmia-detail.html  arrhythmia-list.html  base.html  cardiomyopathy-blood-form.html  cardiomyopathy-detail.html  cardiomyopathy-form.html  cardiomyopathy-list.html  changelog.html  dataset-form.html  dataset-list.html  disease-common-delete.html  disease-common-form.html  disease-form.html  index.html  intervene-detail.html  intervene-list.html  kawasaki-detail.html  kawasaki-list.html  patient-list.html  setting-global.html  setting-parameter.html  setting-website.html  setting.html  surgery-detail.html  surgery-list.html  task-add.html  task-list.html  view-list-filter.html  view-list-page.html
hdbase/migrations/: 0001_initial.py  0002_dataset_name_alter_dataset_code.py  0003_task_command.py  0004_option_alter_task_command_delete_sockettask.py  0005_alter_option_values.py  0006_job_delete_task.py  0008_alter_patient_options_and_more.py  (+11 more)
orthanc/: Configuration.json
venom/: asgi.py  celery.py  jinja2.py  settings.py  urls.py  wsgi.py
(+1 files in other folders)
